force-app/main/default/objects/Litmos__Courses_on_Opportunities__c/Litmos__Courses_on_Opportunities__c.object-meta.xml
<CustomObject>
    <label>Courses on Opportunities</label>
    <nameField>
        <label>Courses on Opportunities Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Courses on Opportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>