force-app/main/default/objects/Litmos__Courses_on_Opportunities__c/fields/Litmos__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Courses on Opportunities</relationshipLabel>
    <relationshipName>Courses_on_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>